--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -12,7 +12,9 @@ on:
 
 jobs:
   test:
-    uses: ./.github/workflows/reusable-test.yml
+    steps:
+      - uses: ./.github/workflows/reusable-test.yml
+        secrets: inherit
 
   publish-cloud-beta:
     runs-on: ubuntu-22.04
