--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,3 +11,7 @@ jobs:
   test:
     uses: ./.github/workflows/reusable-test.yml
     secrets: inherit
+
+  report:
+    uses: ./.github/workflows/report.yml
+    secrets: inherit
