--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -82,3 +82,7 @@ jobs:
         if: env.RELEASE_VERSION
         run: |
           docker push chrztoph/texterify:${{ env.RELEASE_VERSION }}
+
+  report:
+    uses: ./.github/workflows/report.yml
+    secrets: inherit
