--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -86,3 +86,4 @@ jobs:
   report:
     uses: ./.github/workflows/report.yml
     secrets: inherit
+    needs: [test, publish-cloud-beta, publish-on-premise-beta]
