--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -7,11 +7,11 @@ jobs:
   report:
     runs-on: ubuntu-22.04
     steps:
-      - name: Notify Slack about failed tests
+      - name: Send notification to Slack if job fails
         uses: 8398a7/action-slack@v3
         with:
           status: ${{ job.status }}
-          fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest # selectable (default: repo,message)
+          fields: repo,message,workflow,job,took
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-        if: always() # Pick up events even if the job fails or is canceled.
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: failure()
