--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -27,3 +27,6 @@ jobs:
 
       - name: Check database consistency
         run: docker-compose exec -T app yarn check:database-consistency:test
+
+      - uses: ./.github/workflows/report.yml
+        secrets: inherit
