Change network name

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,7 +9,7 @@ version: "3"
 networks:
   default:
     external:
-      name: texterify-network
+      name: txty-network
 
 # Use "host.docker.internal:<port>"" to access other docker services.
 
