--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.122.1/containers/docker-existing-docker-compose
 // If you want to run as a non-root user in the container, see .devcontainer/docker-compose.yml.
 {
-	"name": "Texterify",
+	"name": "txty",
 
 	// Update the 'dockerComposeFile' list if you have more compose files or use different names.
 	// The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
@@ -19,26 +19,22 @@
 	// connected. This is typically a file mount in .devcontainer/docker-compose.yml
 	"workspaceFolder": "/workspace",
 
-	// Set *default* container specific settings.json values on container create.
-	"settings": {
-		"terminal.integrated.shell.linux": null,
-		"[ruby]": {
-			"editor.tabSize": 2
+	"customizations": {
+		"vscode": {
+			// Add the IDs of extensions you want installed when the container is created.
+			"extensions": [
+				"dbaeumer.vscode-eslint",
+				"eamodio.gitlens",
+				"misogi.ruby-rubocop",
+				"esbenp.prettier-vscode",
+				"castwide.solargraph",
+				"rebornix.ruby",
+				"heaths.vscode-guid",
+				"connorshea.vscode-ruby-test-adapter",
+				"hbenl.vscode-test-explorer"
+			]
 		}
-	},
-
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		"dbaeumer.vscode-eslint",
-		"eamodio.gitlens",
-		"misogi.ruby-rubocop",
-		"esbenp.prettier-vscode",
-		"castwide.solargraph",
-		"rebornix.ruby",
-		"heaths.vscode-guid",
-		"connorshea.vscode-ruby-test-adapter",
-		"hbenl.vscode-test-explorer"
-	],
+	}
 
 	// "postCreateCommand": "bundle exec rails db:create db:migrate db:seed"
 
