--- a/.env.development.template
+++ b/.env.development.template
@@ -1,5 +1,4 @@
 APP_HOST=
-MAILER_HOST=
 ASSET_HOST=
 DEBUG_SECRET=
 
@@ -9,6 +8,7 @@ SMTP_PORT=1025
 SMTP_DOMAIN=127.0.0.1
 SMTP_USERNAME=
 SMTP_PASSWORD=
+SMTP_FROM_EMAIL=
 SMTP_ENABLE_STARTTLS_AUTO=
 SMTP_OPENSSL_VERIFY_MODE=
 SMTP_TLS=
