--- a/config/database.yml
+++ b/config/database.yml
@@ -31,7 +31,7 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: texterify
+  #username: txty
 
   # The password associated with the postgres role (username).
   #password:
