--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
+    "@heroicons/react": "^2.0.17",
     "@rails/actioncable": "^7.0.1",
     "@rails/webpacker": "^5.1.1",
     "@sentry/react": "^7.40.0",
