--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM ruby:2.7.1
+FROM ruby:2.7.5-bullseye
 SHELL ["/bin/bash", "-c"]
 
 EXPOSE 3000
@@ -13,6 +13,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     build-essential \
     libpq-dev \
     curl \
+    iproute2 \
     # Install cypress libraries
     libgtk2.0-0 \
     libgtk-3-0 \
@@ -43,7 +44,7 @@ ENV NVM_DIR /usr/local/nvm
 RUN mkdir -p $NVM_DIR
 ENV NODE_VERSION 14.13.1
 ENV NODE_ENV="development"
-ENV NODE_OPTIONS="--max_old_space_size=8192 --openssl-legacy-provider"
+ENV NODE_OPTIONS="--max_old_space_size=8192"
 RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.3/install.sh | bash
 
 # Install node and npm.
