Add alias for faster project start

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -66,3 +66,6 @@ RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/command-hist
 
 # Install mailcatcher.
 RUN gem install mailcatcher
+
+RUN echo 'alias ys="yarn start"' >> ~/.bashrc
+RUN echo 'alias ysw="yarn start:watcher"' >> ~/.bashrc
