--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "devDependencies": {
     "@prettier/plugin-ruby": "^1.5.5",
     "cypress": "12.3.0",
+    "cypress-image-diff-js": "^1.23.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-mocha": "^9.0.0",
     "husky": "^4.3.8",
