Ignore cypress visual report

--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,6 @@ webpacker-stats.json
 spec/cypress/videos
 spec/cypress/screenshots
 spec/cypress/downloads
+cypress-visual-report
 
 docs/openapi-typescript-client
