Add stringsdict import support

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM ruby:2.7.1
+FROM ruby:2.7.5-bullseye
 SHELL ["/bin/bash", "-c"]
 
 EXPOSE 3000
@@ -13,6 +13,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     build-essential \
     libpq-dev \
     curl \
+    iproute2 \
     # Install cypress libraries
     libgtk2.0-0 \
     libgtk-3-0 \
@@ -33,6 +34,8 @@ WORKDIR $RAILS_ROOT
 # Install gems.
 COPY Gemfile Gemfile
 COPY Gemfile.lock Gemfile.lock
+# Fixes bug with nokogiri.
+RUN bundle config set force_ruby_platform true
 RUN gem install bundler:2.1.4
 RUN bundle install --jobs 20 --retry 5
 
@@ -55,10 +58,7 @@ ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
 # Install yarn.
-RUN apt-get install apt-transport-https
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-RUN apt-get update && apt-get install yarn -y
+RUN npm install -g yarn
 
 # Keep bash history between runs.
 RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/command-history/.bash_history" \
@@ -66,3 +66,6 @@ RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/command-hist
 
 # Install mailcatcher.
 RUN gem install mailcatcher
+
+RUN echo 'alias ys="yarn start"' >> ~/.bashrc
+RUN echo 'alias ysw="yarn start:watcher"' >> ~/.bashrc
