--- a/.env.development.template
+++ b/.env.development.template
@@ -16,8 +16,8 @@ SMTP_TLS=
 MAIL_RAISE_DELIVERY_ERRORS_DEV=
 MAIL_PERFORM_DELIVERIES_DEV=
 
-DB_TEST_HOST=
-DB_TEST_USERNAME=
+# DB_TEST_HOST=
+# DB_TEST_USERNAME=
 
 GOOGLE_CLOUD_PROJECT=
 GOOGLE_CLOUD_KEYFILE=
