--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,7 +9,7 @@ version: "3"
 networks:
   default:
     external:
-      name: texterify-network
+      name: txty-network
 
 # Use "host.docker.internal:<port>"" to access other docker services.
 
@@ -41,7 +41,7 @@ services:
     volumes:
       # Update this to wherever you want VS Code to mount the folder of your project
       - .:/workspace:delegated
-      - texterify-app-bash-history:/command-history
+      - txty-app-bash-history:/command-history
 
       # Uncomment the next line to use Docker from inside the container. See https://aka.ms/vscode-remote/samples/docker-from-docker-compose for details.
       # - /var/run/docker.sock:/var/run/docker.sock
@@ -55,7 +55,7 @@ services:
     environment:
       - DB_TEST_HOST=db
       - DB_TEST_USERNAME=postgres
-    image: chrztoph/texterify:local
+    image: txty/txty:local
 
     env_file:
       - .devcontainer/.env
@@ -86,4 +86,4 @@ services:
     image: redis:6.2.0-alpine
 
 volumes:
-  texterify-app-bash-history:
+  txty-app-bash-history:
