--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -11,3 +11,8 @@
 
   ResetMachineTranslationCharactersUsageWorker:
     cron: '0 4 1 * *' # "At 04:00 on day-of-month 1."
+
+:queues:
+  - active_storage_analysis
+  - active_storage_purge
+  - default
