--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "start:watcher": "./bin/webpack-dev-server",
     "start:watcher:no-container-webpacker": "WEBPACKER_DEV_SERVER_PORT=3012 WEBPACKER_DEV_SERVER_PUBLIC=0.0.0.0:3012 ./bin/webpack-dev-server",
     "start:mailcatcher": "mailcatcher --http-ip 0.0.0.0",
-    "test": "yarn test:backend && yarn test:frontend",
+    "test": "yarn test:backend",
     "test:backend": "RAILS_ENV=test bundle exec rspec",
     "test:backend:update": "UPDATE_SNAPSHOTS=true RAILS_ENV=test bundle exec rspec",
     "test:frontend": "yarn cypress install && yarn cypress:run",
