--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,7 @@ AllCops:
     - 'node_modules/**/*'
     - 'bin/**/*'
     - 'spec/cypress/fixtures/**/*'
+    - 'vendor/'
   TargetRubyVersion: 2.7.1
 
 Rails:
