--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,13 +6,11 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-# Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
+digitalocean:
+  service: S3
+  endpoint: <%= ENV.fetch("DO_SPACE_ENDPOINT", "") %>
+  access_key_id: <%= ENV.fetch("DO_SPACE_ACCESS_KEY", "") %>
+  secret_access_key: <%= ENV.fetch("DO_SPACE_SECRET_KEY", "") %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
