Add space region env var

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ digitalocean:
   access_key_id: <%= ENV.fetch("DO_SPACE_ACCESS_KEY", "") %>
   secret_access_key: <%= ENV.fetch("DO_SPACE_SECRET_KEY", "") %>
   bucket: <%= ENV.fetch("DO_SPACE_BUCKET", "") %>
-  region: unused
+  region: <%= ENV.fetch("DO_SPACE_REGION", "unused") %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
