--- a/.env.development.template
+++ b/.env.development.template
@@ -1,9 +1,8 @@
 APP_HOST=
 ASSET_HOST=
 DEBUG_SECRET=
-
 SMTP_AUTHENTICATION=
-SMTP_ADDRESS=127.0.0.1
+SMTP_ADDRESS=mail
 SMTP_PORT=1025
 SMTP_DOMAIN=127.0.0.1
 SMTP_USERNAME=
@@ -12,23 +11,15 @@ SMTP_FROM_EMAIL=
 SMTP_ENABLE_STARTTLS_AUTO=
 SMTP_OPENSSL_VERIFY_MODE=
 SMTP_TLS=
-
 MAIL_RAISE_DELIVERY_ERRORS_DEV=
-MAIL_PERFORM_DELIVERIES_DEV=
-
-# DB_TEST_HOST=
-# DB_TEST_USERNAME=
-
+MAIL_PERFORM_DELIVERIES_DEV=true
 GOOGLE_CLOUD_PROJECT=
 GOOGLE_CLOUD_KEYFILE=
 GOOGLE_CLOUD_OTA_BUCKET_NAME=
-
 SENTRY_SOURCE_MAPS_AUTH_TOKEN=
 SENTRY_SOURCE_MAPS_ORGANIZATION=
 SENTRY_SOURCE_MAPS_PROJECT=
 SENTRY_DSN_BACKEND=
-
 DEEPL_API_TOKEN=
-
 http_proxy=
 http_proxy_deepl=
