--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,6 +10,11 @@
 		"../docker-compose.yml",
 		"docker-compose.yml"
 	],
+	"forwardPorts": [3000, 3030],
+	"portsAttributes": {
+	  "3000": { "label": "App" },
+	  "3030": { "label": "MailHog" }
+	},
 
 	// The 'service' property is the name of the service for the container that VS Code should
 	// use. Update this value and .devcontainer/docker-compose.yml to the real service name.
