--- a/package.json
+++ b/package.json
@@ -95,11 +95,8 @@
     "format": "yarn format:frontend && yarn format:backend",
     "format:frontend": "prettier --write 'app/**/*.{js,ts,tsx}'",
     "format:backend": "prettier --write 'app/**/*.rb'",
-    "start": "yarn start:mailcatcher 2> /dev/null; rm /workspace/tmp/pids/server.pid 2> /dev/null; bundle exec sidekiq & bundle exec rails server -p 3000 -b \"0.0.0.0\"",
-    "start:no-container-webpacker": "WEBPACKER_DEV_SERVER_PORT=3012 WEBPACKER_DEV_SERVER_PUBLIC=host.docker.internal:3012 WEBPACKER_DEV_SERVER_HOST=host.docker.internal yarn start",
+    "start": "bundle exec sidekiq & bundle exec rails server -p 3000 -b \"0.0.0.0\"",
     "start:watcher": "./bin/webpack-dev-server",
-    "start:watcher:no-container-webpacker": "WEBPACKER_DEV_SERVER_PORT=3012 WEBPACKER_DEV_SERVER_PUBLIC=0.0.0.0:3012 ./bin/webpack-dev-server",
-    "start:mailcatcher": "mailcatcher --http-ip 0.0.0.0",
     "test": "yarn test:backend",
     "test:backend": "RAILS_ENV=test bundle exec rspec",
     "test:backend:update": "UPDATE_SNAPSHOTS=true RAILS_ENV=test bundle exec rspec",
