feat: add scalar type conversion method and update export logic for Rails locale files

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -116,6 +116,9 @@ Style/SymbolProc:
 Style/MultilineTernaryOperator:
   Enabled: false
 
+Style/MultipleComparison:
+  Enabled: false
+
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: "indented"
 
